feat: Building Dto의 위도와 경도를 Double 타입으로 변경하고, 좌표 값의 범위 제한